<resources>
    <!-- Strings related to logout -->
    <string name="logout">Log out</string>
    <!-- Strings related to login -->
    <string name="app_name">VanaTherm</string>
    <string name="login">Log in</string>
    <string name="email">Email</string>
    <string name="emailOrUsername">Email/Username</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signUp">Don\'t have an account?<font color="#AC0C0C"><b> Sign up</b></font></string>
    <string name="forgotPwd"><b>Forgot password?</b></string>
    <!-- Strings related to autogenerated login -->
    <string name="welcome">"Welcome! "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >3 characters</string>
    <!-- Strings related to error handling -->
    <string name="login_failed">Login failed, please check entered data</string>
    <string name="api_error">Error, please try again</string>
    <string name="login_data_empty">Data can not be empty</string>
    <string name="error">Error, please contact application developer</string>
    <!-- Strings related to VanaTherm view -->
    <string name="city">City</string>
    <string name="cityTemp" translatable="false">"0°"</string>
    <string name="degreeSign" translatable="false">°</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="humidityValue" translatable="false">00%</string>
    <string name="tempWatcher">Building</string>
    <string name="increase" translatable="false">+</string>
    <string name="decrease" translatable="false">-</string>
    <string name="weatherStatus">Weather status</string>
    <string name="btnSet">Set</string>
    <!-- Strings related to bottom_nav_bar.xml-->
    <string name="vanaTherm">VanaTherm</string>
    <string name="heatingHistory">Heating history</string>
    <string name="heatingBills">Heating bills</string>
    <!-- Strings related to HistoryFragment-->
    <string name="buildingName">Building name:</string>
    <string name="street">Street:</string>
    <string name="floor">Floor:</string>
    <string name="roomName">Room name:</string>
    <string name="deviceId">device id:</string>
    <string name="date">Date:</string>
    <string name="timeFrom">Time from:</string>
    <string name="timeTo">Time to:</string>
    <string name="atmTemperature">Read temperature:</string>
    <string name="desiredTemperature">Desired temperature:</string>
    <!-- Strings related to About (HeatingBillsFragment) -->
    <string name="about">About VanaTherm application</string>
    <string name="author">Author: Kristijan Vanja</string>
    <string name="college">College: VUB</string>
    <string name="subject">Subject: Programming of mobile applications</string>
    <string name="subjectYear">Year: 2021"</string>
    <string name="professor">Professors: Tomislav Adamović, Ante Javor</string>
    <string name="appVersion">Version: 1.0</string>

</resources>
