<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/app_icon"
        app:layout_constraintHorizontal_bias="0.498"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/llInputs"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name">

    </ImageView>

    <LinearLayout
        android:id="@+id/llInputs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/app_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/tilEmailorUsername"
            android:layout_width="300dp"
            android:layout_marginVertical="10dp"
            android:layout_height="wrap_content"
            android:hint="@string/emailOrUsername">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/tilPassword"
            android:layout_width="300dp"
            android:layout_marginVertical="10dp"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:counterTextColor="@color/heating_blue"
            android:hint="@string/password"
            app:errorEnabled="true"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/heating_blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="300dp"
            android:layout_height="65dp"
            android:text="@string/login" />

        <TextView
            android:id="@+id/tvForgotPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="10dp"
            android:text="@string/forgotPwd"
            android:gravity="end"
            android:textColor="@color/heating_red" />

    </LinearLayout>


    <!--    <LinearLayout-->
    <!--        android:id="@+id/llCreateAcc"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="50dp"-->
    <!--        android:orientation="horizontal"-->
    <!--        tools:layout_editor_absoluteX="0dp"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
    <!--        app:layout_constraintRight_toRightOf="parent">-->

    <!--        <TextView-->
    <!--            android:id="@+id/tvNoAcc"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="match_parent"-->
    <!--            app:layout_constraintBottom_toBottomOf="parent"-->
    <!--            app:layout_constraintStart_toStartOf="parent"-->
    <!--            android:gravity="bottom|center"-->
    <!--            android:text="@string/signUp" />-->
    <!--    </LinearLayout>-->

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/llInputs"
        app:layout_constraintTop_toBottomOf="@id/app_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>